force-app/main/default/objects/Error_Log__c/fields/Business_Process__c.field-meta.xml
<CustomField>
    <fullName>Business_Process__c</fullName>
    <label>Business Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>