force-app/main/default/objects/Error_Log__c/fields/ExceptionRefId__c.field-meta.xml
<CustomField>
    <fullName>ExceptionRefId__c</fullName>
    <label>ExceptionRefId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>