force-app/main/default/objects/Error_Log__c/fields/Http_Status__c.field-meta.xml
<CustomField>
    <fullName>Http_Status__c</fullName>
    <label>Http Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>