force-app/main/default/objects/Error_Log__c/fields/Logged_In_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_User_ID__c</fullName>
    <label>Logged In User Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>