force-app/main/default/objects/Error_Log__c/fields/Original_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_Record_Id__c</fullName>
    <label>Original Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>