force-app/main/default/objects/Error_Log__c/fields/Request_Start_Dt__c.field-meta.xml
<CustomField>
    <fullName>Request_Start_Dt__c</fullName>
    <label>Request Start Dt</label>
    <type>DateTime</type>
</CustomField>