force-app/main/default/objects/Error_Log__c/fields/Response_Received_Dt__c.field-meta.xml
<CustomField>
    <fullName>Response_Received_Dt__c</fullName>
    <label>Response Received Dt</label>
    <type>DateTime</type>
</CustomField>