force-app/main/default/objects/Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apex_Class__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Message__c</columns>
    <columns>Method_Name__c</columns>
    <columns>Stack_Trace__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>